--- a/vista/noticia.twig
+++ b/vista/noticia.twig
@@ -14,8 +14,11 @@
       <header>
         <h1>{{ noticia.titulo }}</h1>
         <h2>Escrito por {{ noticia.autor }}</h2>
-        <h3>{{ noticia.fecha }}</h3>
-        <h4>{{ noticia.etiquetas }}</h4>
+          <h3>{{ noticia.fecha }}</h3>
+        <div class="contenedor-fila-2">
+          <h4>Etiquetas: {{ noticia.etiquetas }}</h4>
+          <h4>{{ noticia.visitas }} visitas</h4>
+        </div>
         <div class="contenedor-imagen">
           <a href="{{ noticia.enlace }}">
             <img src="{{ noticia.imagen }}" alt=""/>
@@ -51,6 +54,45 @@
 
   </div>
   <!-- Enlaces -->
+
+
+  <!-- Comentarios -->
+    <div class="seccion-comentarios">
+    <h2>Comentarios</h2>
+
+    <div class="navitem comentario">
+      <form method="post" action="" >
+        <input type="text" name="comentario" maxlength="140" required
+        placeholder="Añade un comentario público..." autocomplete="off"></textarea>
+        <input class="boton" type="submit" value="Comentar"/>
+      </form>
+    </div>
+
+
+    <div class="navitem comentario">
+      <div class="cabecera-comentario">
+        <h4>Usuario_predeterminado</h4>
+        <h5>dd/mm/yyyy hh:mm:ss</h5>
+      </div>
+      <div class="cuerpo">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </div>
+    </div>
+
+    {% for item in noticia.comentarios %}
+      <div class="navitem comentario">
+        <div class="cabecera-comentario">
+          <h4>{{ item.usuario }}</h4>
+          <h5>{{ item.fecha }}</h5>
+        </div>
+        <div class="cuerpo">
+          {{ item.texto }}
+        </div>
+      </div>
+    {% endfor %}
+  </div>
+  <!-- Comentarios -->
+
 </div>
 
 {% endblock %}
